--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,13 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 ==========================
+Changes in version 1.0.519
+==========================
+
+- Fix segment names used to fetch container-title-short
+  info for journal name abbreviations.
+
+==========================
 Changes in version 1.0.518
 ==========================
 
