--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,27 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 ==========================
+Changes in version 1.0.537
+==========================
+
+- Apply options to localCompare() when sorting citations and bibliography
+  entries. Options invoked are:
+
+    {
+        sensitivity:"base",
+        ignorePunctuation:true,
+        numeric:true
+    }
+
+  See:
+
+    https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String/localeCompare
+    https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Intl#Locale_identification_and_negotiation
+
+  Thanks to Aurimas Vinckevicius for reporting an inconsistency in sorting, and
+  for pointing out these options as a way of eliminating it.
+
+==========================
 Changes in version 1.0.536
 ==========================
 
