--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,14 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 ==========================
+Changes in version 1.0.549
+==========================
+
+- Fix issue in subtitle capitalization.
+
+  https://forums.zotero.org/discussion/35190/beta-capitalization-after-colons/#Item_37
+
+==========================
 Changes in version 1.0.548
 ==========================
 
