--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 ==========================
+Changes in version 1.0.554
+==========================
+
+- Extend jurisdiction suppression to hearings
+
+==========================
 Changes in version 1.0.553
 ==========================
 
