--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@ Summary of changes to citeproc-js since version 1.0.0 release.
 
 
 ==========================
+Changes in version 1.0.557
+==========================
+
+- Preliminary support for law style modules.
+
+==========================
 Changes in version 1.0.556
 ==========================
 
