--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@ Summary of changes to citeproc-js since version 1.0.0 release.
 
 
 ==========================
+Changes in version 1.0.558
+==========================
+
+- If nesting issues in new law style module code.
+
+==========================
 Changes in version 1.0.557
 ==========================
 
