--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,14 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 ==========================
+Changes in version 1.1.0
+==========================
+
+- citeproc-js now has full support for jurisdiction-specific
+  modular legal styles. This is the last piece to the puzzle
+  it set out to solve. Time to roll over that version number.
+
+==========================
 Changes in version 1.0.561
 ==========================
 
