--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,8 +1,14 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
-==========================
+========================
+Changes in version 1.1.1
+========================
+
+- Require juris-locator-label macro as a late addition.
+
+========================
 Changes in version 1.1.0
-==========================
+========================
 
 - citeproc-js now has full support for jurisdiction-specific
   modular legal styles. This is the last piece to the puzzle
