--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,7 +1,19 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 ========================
-Changes in version 1.1.1
+Changes in version 1.1.4
+========================
+
+- Particles parser.
+
+========================
+Changes in version 1.1.3
+========================
+
+- Rename alt-macro attribute as alternative-macro
+
+========================
+Changes in version 1.1.2
 ========================
 
 - Fix loss of affixes on failed juris test
