--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,5 +1,12 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
+=========================
+Changes in version 1.1.10
+=========================
+
+- Fix conditional for embedded label in "number" variable rendered
+  with cs:number
+
 ========================
 Changes in version 1.1.9
 ========================
