--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,14 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 =========================
+Changes in version 1.1.18
+=========================
+
+- Add locale fallback "lv_LV" for "lv".
+
+- Check for callback completeness in test runner.
+
+=========================
 Changes in version 1.1.17
 =========================
 
