--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,14 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 =========================
+Changes in version 1.1.25
+=========================
+
+- Add an authority-residue condition. Checks whether
+  there are elements not rendered by the most recent
+  use-last condition.
+
+=========================
 Changes in version 1.1.24
 =========================
 
