--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,13 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 =========================
+Changes in version 1.1.32
+=========================
+
+- Show multilingual forms of long-form institution name on
+  failover from request for short form.
+
+=========================
 Changes in version 1.1.31
 =========================
 
