--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,14 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 =========================
+Changes in version 1.1.34
+=========================
+
+- Fix bug in institution names handling. Force values to
+  obj.literal rather than obj.family w/obj.isInstitution.
+  Simpler is beautifuler.
+
+=========================
 Changes in version 1.1.33
 =========================
 
