--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,14 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 =========================
+Changes in version 1.1.37
+=========================
+
+- Fix scoping bug in RTF markup.
+
+  https://forums.zotero.org/discussion/50304/problems-with-et-al
+
+=========================
 Changes in version 1.1.36
 =========================
 
