--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,16 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 =========================
+Changes in version 1.1.42
+=========================
+
+- Eliminate extraneous \\line operator in RTF output. Not
+  extensively tested.
+
+    https://forums.zotero.org/discussion/2252/word-plugin-inserts-superfluous-linebreaks-in-bibliography/
+    https://forums.zotero.org/discussion/50628/bibliography-alignment/
+
+=========================
 Changes in version 1.1.41
 =========================
 
