--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,14 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 =========================
+Changes in version 1.1.43
+=========================
+
+- Fix bugs in three particle specs (d', des, de).
+
+    https://forums.zotero.org/discussion/50718/apostrophe-in-last-name/
+
+=========================
 Changes in version 1.1.42
 =========================
 
