--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,13 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 =========================
+Changes in version 1.1.49
+=========================
+
+- Clean up suppress-jurisdictions mess (includes a change to hook function
+  signature).
+
+=========================
 Changes in version 1.1.48
 =========================
 
