--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,16 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 =========================
+Changes in version 1.1.55
+=========================
+
+- Add Dutch particles from external source linked by Rintze, as suggested by nickbart
+
+    https://forums.zotero.org/discussion/30974/2/any-idea-why-an-a-author-comes-last-in-the-bibliography/2/#Item_26
+
+- Merge entries as appropriate
+
+=========================
 Changes in version 1.1.54
 =========================
 
