--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,14 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 =========================
+Changes in version 1.1.59
+=========================
+
+- Update to processor documentation.
+
+- Fix parsing of particles with articulars to work like normal.
+
+=========================
 Changes in version 1.1.58
 =========================
 
