--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,14 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 =========================
+Changes in version 1.1.62
+=========================
+
+- Fix bug in cite-group-delimiter:
+
+    https://github.com/citation-style-language/styles/pull/1742/files#r43429282
+
+=========================
 Changes in version 1.1.61
 =========================
 
